# rust-web-ssh-advance

./: .gitignore  Cargo.toml  README.md  start_server.bat  start_server.sh
src/: api.rs  audit.rs  auth.rs  crypto.rs  host_key.rs  main.rs  ssh_config.rs
src/api/: audit.rs  auth.rs  config.rs  files.rs  not_found.rs  ssh_websocket.rs
src/api/ssh_websocket/: session.rs
static/: 404.html  app.js  i18n.js  index.html  login.html  style.css
