[package]
name = "webssh"
version = "0.1.0"
edition = "2021"
authors = ["steven"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
ssh2 = "0.9"
async-trait = "0.1"
anyhow = "1.0"
serde_json = "1.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
pbkdf2 = "0.11"
hmac = "0.12"
rpassword = "7.3"
base64ct = "=1.6.0"
totp-lite = "2.0"
qrcode = { version = "0.12", default-features = false, features = ["svg"] }
base32 = "0.4"

